--- a/public/index.html
+++ b/public/index.html
@@ -1,20 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta charset="utf-8"/>
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta name="theme-color" content="#000000"/>
     <meta
-      name="description"
-      content="Prestige Paris Transfers"
+            name="description"
+            content="Prestige Paris Transfers"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    {/* <!-- Facebook Meta Tags --> */}
+    <meta property="og:title" content="Prestige Paris Transfers">
+    <meta property="og:description"
+          content="Prestige Paris Transfer' is a private transfer service renowned for being one of the friendliest and most cost-effective airport shuttle around.">
+    <meta property="og:image" content="https://www.prestigeparistransfers.com/images/og-image.png">
+    <meta property="og:url" content="https://www.prestigeparistransfers.com/">
+
+    {/* <!-- Twitter Meta Tags --> */}
+    <meta name="twitter:title" content="Prestige Paris Transfers">
+    <meta name="twitter:description"
+          content="Prestige Paris Transfer' is a private transfer service renowned for being one of the friendliest and most cost-effective airport shuttle around.">
+    <meta name="twitter:url" content="https://www.prestigeparistransfers.com/images/og-image.png">
+    <meta name="twitter:card" content="summary_large_image">
+
+
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png"/>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
