--- a/public/index.html
+++ b/public/index.html
@@ -7,18 +7,18 @@
     <meta name="theme-color" content="#000000"/>
     <meta
             name="description"
-            content="Espresso Paris Transfers"
+            content="Espresso Paris Transfer"
     />
-    <meta property="og:title" content="Espresso Paris Transfers">
+    <meta property="og:title" content="Espresso Paris Transfer">
     <meta property="og:description"
           content="Espresso Paris Transfer' is a private transfer service renowned for being one of the friendliest and most cost-effective airport shuttle around.">
-    <meta property="og:image" content="https://www.espressoparistransfers.com/images/og-image.png">
-    <meta property="og:url" content="https://www.espressoparistransfers.com/">
+    <meta property="og:image" content="https://www.espressoparistransfer.com/images/og-image.png">
+    <meta property="og:url" content="https://www.espressoparistransfer.com/">
 
-    <meta name="twitter:title" content="Espresso Paris Transfers">
+    <meta name="twitter:title" content="Espresso Paris Transfer">
     <meta name="twitter:description"
           content="Espresso Paris Transfer' is a private transfer service renowned for being one of the friendliest and most cost-effective airport shuttle around.">
-    <meta name="twitter:url" content="https://www.espressoparistransfers.com/images/og-image.png">
+    <meta name="twitter:url" content="https://www.espressoparistransfer.com/images/og-image.png">
     <meta name="twitter:card" content="summary_large_image">
 
 
@@ -37,7 +37,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Espresso Paris Transfers</title>
+    <title>Espresso Paris Transfer</title>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-236098581-1"></script>
