--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
     </script>
     <meta charset="utf-8"/>
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico"/>
+    <meta name="google-site-verification" content="4K9TDrmmPgyNnHK80rZW9MzUeBJnFhVpROa3Qdrqzbs"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta name="theme-color" content="#000000"/>
     <meta
