meta keyword , prerender

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=AW-1016274834"></script>
@@ -14,34 +15,31 @@
 
         gtag('config', 'AW-1016274834');
     </script>
-    <meta charset="utf-8"/>
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico"/>
-    <meta name="google-site-verification" content="4K9TDrmmPgyNnHK80rZW9MzUeBJnFhVpROa3Qdrqzbs"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <meta name="theme-color" content="#000000"/>
-    <meta
-            name="description"
-            content="Espresso Paris Transfer"
-    />
+    <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="google-site-verification" content="4K9TDrmmPgyNnHK80rZW9MzUeBJnFhVpROa3Qdrqzbs" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta name="description" content="Espresso Paris Transfer" />
+    <meta name="keywords" content="Airport Private Transfer,Espresso Paris Transfer,Paris Transfer,private shuttle transfer,cost-effective
+      shuttle transfer services,Charles de Gaulle Roissy(CDG),Orly (ORY),Le Bourget (LBG),Beauvais Airport (BVA)">
     <meta property="og:title" content="Espresso Paris Transfer">
-    <meta property="og:description"
-          content="Espresso Paris Transfer' is a private transfer service renowned for being one of the friendliest and most cost-effective airport shuttle around.">
+    <meta property="og:description" content="Espresso Paris Transfer' is a private transfer service renowned for being one of the friendliest and most cost-effective airport shuttle around.">
     <meta property="og:image" content="https://www.espressoparistransfer.com/images/og-image.png">
     <meta property="og:url" content="https://www.espressoparistransfer.com/">
 
     <meta name="twitter:title" content="Espresso Paris Transfer">
-    <meta name="twitter:description"
-          content="Espresso Paris Transfer' is a private transfer service renowned for being one of the friendliest and most cost-effective airport shuttle around.">
+    <meta name="twitter:description" content="Espresso Paris Transfer' is a private transfer service renowned for being one of the friendliest and most cost-effective airport shuttle around.">
     <meta name="twitter:url" content="https://www.espressoparistransfer.com/images/og-image.png">
     <meta name="twitter:card" content="summary_large_image">
 
 
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png"/>
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -68,13 +66,13 @@
     </script>
 
 </head>
+
 <body>
-<div id="fb-root"></div>
-<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v14.0"
-        nonce="i5ZtFDxX"></script>
-<noscript>You need to enable JavaScript to run this app.</noscript>
-<div id="root"></div>
-<!--
+    <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v14.0" nonce="i5ZtFDxX"></script>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+    <!--
   This HTML file is a template.
   If you open it directly in the browser, you will see an empty page.
 
@@ -85,4 +83,5 @@
   To create a production bundle, use `npm run build` or `yarn build`.
 -->
 </body>
+
 </html>
