--- a/public/index.html
+++ b/public/index.html
@@ -64,12 +64,24 @@
 
         gtag('config', 'UA-236098581-1');
     </script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-11473282181"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'AW-11473282181');
+    </script>
 
 </head>
 
 <body>
     <div id="fb-root"></div>
     <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v14.0" nonce="i5ZtFDxX"></script>
+
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
